--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
 	"appid": "wxf760fd6b0e2d7e3c",
-	"projectname": "%E5%9B%9B%E5%85%AD%E7%BA%A7%E5%8F%A3%E8%AF%AD%E7%BB%83%E4%B9%A0",
+	"projectname": "-",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
