--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -49,6 +49,11 @@
 					"name": "单个配音",
 					"pathName": "pages/dubSingle/dubSingle",
 					"query": "title=Flipped"
+				},
+				{
+					"id": -1,
+					"name": "配音预览",
+					"pathName": "pages/preview/preview"
 				}
 			]
 		}
