--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -53,7 +53,19 @@
 				{
 					"id": -1,
 					"name": "配音预览",
-					"pathName": "pages/preview/preview"
+					"pathName": "pages/preview/preview",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "cet4",
+					"pathName": "pages/cet4/cet4",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "课程",
+					"pathName": "pages/course/course"
 				}
 			]
 		}
